--- a/index.html
+++ b/index.html
@@ -122,7 +122,6 @@
         color: #000;
         border-color: #c7d2c3;
       }
-      /* Selected menu item styling: bold, highlighted background and black text */
       .selected {
         font-weight: bold;
         background-color: #91b3a2;
@@ -253,7 +252,7 @@
             <li data-section="LPGATour">LPGA Tour</li>
           </ul>
           <!-- A‑Z FILTER LIST (Complete) -->
-          <ul id="menuList-az" style="display: none;">
+        <ul id="menuList-az" style="display: none;">
             <li data-section="Home">Home</li>
             <li data-section="AFCChampionsLeagueElite">AFC Champions League Elite</li>
             <li data-section="AFL">AFL</li>
@@ -502,6 +501,7 @@
         </div>
       </div>
 
+
       <!-- DIVIDER BETWEEN MAIN MENU AND NEWS PANEL -->
       <div class="divider"></div>
 
@@ -543,77 +543,77 @@
             <div class="feed-content">Loading Yahoo feed...</div>
           </div>
         </div>
-        <!-- MLB News Section with new RSS feed -->
+        <!-- MLB News Section -->
         <div id="news-MLB" class="content-section" style="display: none;">
           <div class="rss-feed" id="feed-_6gzCeS4YQ4h2adTs">
             <h4>MLB</h4>
             <div class="feed-content">Loading MLB feed...</div>
           </div>
         </div>
-        <!-- NBA News Section with new RSS feed (identical structure to MLB) -->
+        <!-- NBA News Section -->
         <div id="news-NBA" class="content-section" style="display: none;">
           <div class="rss-feed" id="feed-_ja3fYEA7yigAcmAk">
             <h4>NBA</h4>
             <div class="feed-content">Loading NBA feed...</div>
           </div>
         </div>
-        <!-- NFL News Section with new RSS feed -->
+        <!-- NFL News Section -->
         <div id="news-NFL" class="content-section" style="display: none;">
           <div class="rss-feed" id="feed-_iiyR3EPoC5QXMnqt">
             <h4>NFL</h4>
             <div class="feed-content">Loading NFL feed...</div>
           </div>
         </div>
-        <!-- NHL News Section with new RSS feed -->
+        <!-- NHL News Section -->
         <div id="news-NHL" class="content-section" style="display: none;">
           <div class="rss-feed" id="feed-_5c3ZcfSrwvdwdG2Z">
             <h4>NHL</h4>
             <div class="feed-content">Loading NHL feed...</div>
           </div>
         </div>
-        <!-- MLS News Section with custom XML fetch -->
+        <!-- MLS News Section -->
         <div id="news-MLS" class="content-section" style="display: none;">
           <div class="rss-feed" id="feed-_pBOHW7eyjbGkaiZq">
             <h4>MLS</h4>
             <div class="feed-content">Loading MLS feed...</div>
           </div>
         </div>
-        <!-- Premier League News Section with custom XML fetch -->
+        <!-- Premier League News Section -->
         <div id="news-PremierLeague" class="content-section" style="display: none;">
           <div class="rss-feed" id="feed-PremierLeague">
             <h4>Premier League</h4>
             <div class="feed-content">Loading Premier League feed...</div>
           </div>
         </div>
-        <!-- UEFA Champions League News Section with custom XML fetch -->
+        <!-- UEFA Champions League News Section -->
         <div id="news-UEFAChampionsLeague" class="content-section" style="display: none;">
           <div class="rss-feed" id="feed-UEFAChampionsLeague">
             <h4>UEFA Champions League</h4>
             <div class="feed-content">Loading UEFA Champions League feed...</div>
           </div>
         </div>
-        <!-- Serie A News Section with custom XML fetch -->
+        <!-- Serie A News Section -->
         <div id="news-SerieA" class="content-section" style="display: none;">
           <div class="rss-feed" id="feed-SerieA">
             <h4>Serie A</h4>
             <div class="feed-content">Loading Serie A feed...</div>
           </div>
         </div>
-        <!-- Bundesliga News Section with custom XML fetch -->
+        <!-- Bundesliga News Section -->
         <div id="news-Bundesliga" class="content-section" style="display: none;">
           <div class="rss-feed" id="feed-Bundesliga">
             <h4>Bundesliga</h4>
             <div class="feed-content">Loading Bundesliga feed...</div>
           </div>
         </div>
-        <!-- LaLiga News Section with custom XML fetch -->
+        <!-- LaLiga News Section -->
         <div id="news-LaLiga" class="content-section" style="display: none;">
           <div class="rss-feed" id="feed-LaLiga">
             <h4>LaLiga</h4>
             <div class="feed-content">Loading LaLiga feed...</div>
           </div>
         </div>
-        <!-- Other news sections remain as placeholders -->
+        <!-- Other News Sections -->
         <div id="news-Soccer" class="content-section" style="display: none;">
           <div class="rss-feed" id="feed-Soccer">
             <h4>Soccer</h4>
@@ -674,54 +674,110 @@
             <div class="feed-content">Loading PGA Tour feed...</div>
           </div>
         </div>
-      <div id="news-UFC" class="content-section" style="display: none;">
-  <div class="rss-feed" id="feed-UFC">
-    <h4>UFC</h4>
-    <div class="feed-content">Loading UFC feed...</div>
-  </div>
-</div>
-
+        <!-- New UFC News Section -->
+        <div id="news-UFC" class="content-section" style="display: none;">
+          <div class="rss-feed" id="feed-UFC">
+            <h4>UFC</h4>
+            <div class="feed-content">Loading UFC feed...</div>
+          </div>
+        </div>
+        <!-- New Boxing News Section -->
         <div id="news-Boxing" class="content-section" style="display: none;">
-          Placeholder content for Boxing (News)
+          <div class="rss-feed" id="feed-Boxing">
+            <h4>Boxing</h4>
+            <div class="feed-content">Loading Boxing feed...</div>
+          </div>
         </div>
+        <!-- New NASCAR Cup Series News Section -->
         <div id="news-NASCARCupSeries" class="content-section" style="display: none;">
-          Placeholder content for NASCAR Cup Series (News)
+          <div class="rss-feed" id="feed-NASCARCupSeries">
+            <h4>NASCAR Cup Series</h4>
+            <div class="feed-content">Loading NASCAR Cup Series feed...</div>
+          </div>
         </div>
+        <!-- New Tennis News Section -->
         <div id="news-Tennis" class="content-section" style="display: none;">
-          Placeholder content for Tennis (News)
+          <div class="rss-feed" id="feed-Tennis">
+            <h4>Tennis</h4>
+            <div class="feed-content">Loading Tennis feed...</div>
+          </div>
         </div>
+        <!-- New WNBA News Section -->
         <div id="news-WNBA" class="content-section" style="display: none;">
-          Placeholder content for WNBA (News)
+          <div class="rss-feed" id="feed-WNBA">
+            <h4>WNBA</h4>
+            <div class="feed-content">Loading WNBA feed...</div>
+          </div>
         </div>
+        <!-- New LIV Golf News Section -->
         <div id="news-LIVGolf" class="content-section" style="display: none;">
-          Placeholder content for LIV Golf (News)
+          <div class="rss-feed" id="feed-LIVGolf">
+            <h4>LIV Golf</h4>
+            <div class="feed-content">Loading LIV Golf feed...</div>
+          </div>
         </div>
+        <!-- New IndyCar News Section -->
         <div id="news-IndyCar" class="content-section" style="display: none;">
-          Placeholder content for IndyCar (News)
+          <div class="rss-feed" id="feed-IndyCar">
+            <h4>IndyCar</h4>
+            <div class="feed-content">Loading IndyCar feed...</div>
+          </div>
         </div>
+        <!-- New NCAAM News Section -->
         <div id="news-NCAAM" class="content-section" style="display: none;">
-          Placeholder content for NCAAM (News)
+          <div class="rss-feed" id="feed-NCAAM">
+            <h4>NCAAM</h4>
+            <div class="feed-content">Loading NCAAM feed...</div>
+          </div>
         </div>
+        <!-- New NCAAW News Section -->
         <div id="news-NCAAW" class="content-section" style="display: none;">
-          Placeholder content for NCAAW (News)
+          <div class="rss-feed" id="feed-NCAAW">
+            <h4>NCAAW</h4>
+            <div class="feed-content">Loading NCAAW feed...</div>
+          </div>
         </div>
+        <!-- New UFL News Section -->
         <div id="news-UFL" class="content-section" style="display: none;">
-          Placeholder content for UFL (News)
+          <div class="rss-feed" id="feed-UFL">
+            <h4>UFL</h4>
+            <div class="feed-content">Loading UFL feed...</div>
+          </div>
         </div>
+        <!-- New NCAA Baseball News Section -->
         <div id="news-NCAABaseball" class="content-section" style="display: none;">
-          Placeholder content for NCAA Baseball (News)
+          <div class="rss-feed" id="feed-NCAABaseball">
+            <h4>NCAA Baseball</h4>
+            <div class="feed-content">Loading NCAA Baseball feed...</div>
+          </div>
         </div>
+        <!-- New NCAA Softball News Section -->
         <div id="news-NCAASoftball" class="content-section" style="display: none;">
-          Placeholder content for NCAA Softball (News)
+          <div class="rss-feed" id="feed-NCAASoftball">
+            <h4>NCAA Softball</h4>
+            <div class="feed-content">Loading NCAA Softball feed...</div>
+          </div>
         </div>
+        <!-- New MotoGP News Section -->
         <div id="news-MotoGP" class="content-section" style="display: none;">
-          Placeholder content for MotoGP (News)
+          <div class="rss-feed" id="feed-MotoGP">
+            <h4>MotoGP</h4>
+            <div class="feed-content">Loading MotoGP feed...</div>
+          </div>
         </div>
+        <!-- New LPGA Tour News Section -->
         <div id="news-LPGATour" class="content-section" style="display: none;">
-          Placeholder content for LPGA Tour (News)
+          <div class="rss-feed" id="feed-LPGATour">
+            <h4>LPGA Tour</h4>
+            <div class="feed-content">Loading LPGA Tour feed...</div>
+          </div>
         </div>
+        <!-- New Track & Field News Section -->
         <div id="news-TrackAndField" class="content-section" style="display: none;">
-          Placeholder content for Track &amp; Field (News)
+          <div class="rss-feed" id="feed-TrackAndField">
+            <h4>Track &amp; Field</h4>
+            <div class="feed-content">Loading Track &amp; Field feed...</div>
+          </div>
         </div>
       </div>
 
@@ -748,13 +804,26 @@
 
     <!-- Lazy Load Social Feeds Script -->
     <script>
-      // Updated rssFeeds: For UEFAChampionsLeague and PremierLeague, we use an array of feed IDs
+      // Updated rssFeeds including new social feed keys
       const rssFeeds = {
         Home: "_W0ZzValCUhv9Q88Y",
         MLB: "_wcNmb7Pr9SpM8BQ4",
         NBA: "5RV6ZHeyJhWxORz5",
         NFL: "INJ6Bk4bDkbmuBbD",
         NHL: "pNuN9vyuvzYgmCmy",
+        UFC: "D7Pzjs1eNyeNfRZg",
+        Boxing: "E4QHg9gnRHekN0eL",
+        NASCARCupSeries: "aIpvGxQaOiSfwADb",
+        Tennis: "InsXma0Pwpks5ZgB",
+        WNBA: "Am6lI6WHRaAxHmbL",
+        LIVGolf: "xTe6w6kt4LL4Hi8v",
+        IndyCar: "0J2bXOqqSpbcTt1Y",
+        NCAAM: "Zd1KfPkoPaqAlIxp",
+        NCAAW: "Aozk9D13FRvOiR16",
+        NCAABaseball: "iJ2vCYtgsHm9IR5d",
+        NCAASoftball: "ON2eWO5ApxIBiGYV",
+        MotoGP: "CKPWivTATHSyhDSN",
+        LPGATour: "RsLnkbshlMSpf2b7",
         UEFAChampionsLeague: ["_UEFASocialFeed", "fJDD9RMqob2qCjwA"],
         PremierLeague: ["_PremierSocialFeed", "neXmnwbubK21ZWYF"],
         MLS: "9EAOd7JHtY1IRVUP",
@@ -813,6 +882,7 @@
       });
     </script>
 
+    <!-- News Feeds Script -->
     <script>
       document.addEventListener("DOMContentLoaded", () => {
         // Helper function to fetch and render an XML feed and attach click event listeners to its links
@@ -840,7 +910,6 @@
                 });
                 container.innerHTML = "";
                 container.appendChild(ul);
-                // Attach event listeners to each link in the newly added feed
                 ul.querySelectorAll("a").forEach(link => {
                   link.addEventListener("click", () => {
                     link.classList.add("clicked");
@@ -909,48 +978,59 @@
           "https://rss.app/feeds/_5c3ZcfSrwvdwdG2Z.xml"
         ); // NHL
 
-
         // Fetch custom feeds for new news sections
         fetchFeed(
-          "#feed-Soccer .feed-content",
-          "https://rss.app/feeds/_X9Xovb703UELx2SR.xml"
-        ); // Soccer
+          "#feed-UFC .feed-content",
+          "https://rss.app/feeds/_YGmr1TjOD0yXmfU1.xml"
+        ); // UFC
         fetchFeed(
-          "#feed-FACup .feed-content",
-          "https://rss.app/feeds/_w1qT9O9DzNOQHCFW.xml"
-        ); // FA Cup
+          "#feed-Boxing .feed-content",
+          "https://rss.app/feeds/_7DfbEtxpn8RPNIMf.xml"
+        ); // Boxing
         fetchFeed(
-          "#feed-LigaMX .feed-content",
-          "https://rss.app/feeds/_JgpA2OqGGC8IrApe.xml"
-        ); // Liga MX
+          "#feed-NASCARCupSeries .feed-content",
+          "https://rss.app/feeds/_D7Q3jbrHjR3bGj8O.xml"
+        ); // NASCAR Cup Series
         fetchFeed(
-          "#feed-NWSL .feed-content",
-          "https://rss.app/feeds/_AfGYD33BOZl9OWYz.xml"
-        ); // NWSL
+          "#feed-Tennis .feed-content",
+          "https://rss.app/feeds/_tGSXi2957CegL2kC.xml"
+        ); // Tennis
         fetchFeed(
-          "#feed-Ligue1 .feed-content",
-          "https://rss.app/feeds/_9nS7hLmB3aUlWcjH.xml"
-        ); // Ligue 1
+          "#feed-WNBA .feed-content",
+          "https://rss.app/feeds/_JsIgbwln4EnDHpSE.xml"
+        ); // WNBA
         fetchFeed(
-          "#feed-UEFAEuropaLeague .feed-content",
-          "https://rss.app/feeds/_Op8jopGsYny0gt0e.xml"
-        ); // UEFA Europa League
+          "#feed-LIVGolf .feed-content",
+          "https://rss.app/feeds/_s7tH2abPc7ZQXhLp.xml"
+        ); // LIV Golf
         fetchFeed(
-          "#feed-UEFAConferenceLeague .feed-content",
-          "https://rss.app/feeds/weob7vyzbRkL8od8.xml"
-        ); // UEFA Conference League
+          "#feed-IndyCar .feed-content",
+          "https://rss.app/feeds/_TqIJuTCX0SmFe0lM.xml"
+        ); // IndyCar
         fetchFeed(
-          "#feed-FormulaOne .feed-content",
-          "https://rss.app/feeds/_69qKKrngeWZusxVz.xml"
-        ); // Formula One
+          "#feed-NCAAM .feed-content",
+          "https://rss.app/feeds/_va6EQaZAxOx6z8xR.xml"
+        ); // NCAAM
         fetchFeed(
-          "#feed-NCAAF .feed-content",
-          "https://rss.app/feeds/_e8BTSPZYg61J9CYu.xml"
-        ); // NCAAF
+          "#feed-NCAAW .feed-content",
+          "https://rss.app/feeds/_2P4NcD95YPwU8T51.xml"
+        ); // NCAAW
         fetchFeed(
-          "#feed-PGATour .feed-content",
-          "https://rss.app/feeds/_QQsPX3f8GnzYvAXX.xml"
-        ); // PGA Tour
+          "#feed-NCAABaseball .feed-content",
+          "https://rss.app/feeds/_q2SYr186Ed7j8jud.xml"
+        ); // NCAABaseball
+        fetchFeed(
+          "#feed-NCAASoftball .feed-content",
+          "https://rss.app/feeds/_y4zf68Y0lK5bkT47.xml"
+        ); // NCAASoftball
+        fetchFeed(
+          "#feed-MotoGP .feed-content",
+          "https://rss.app/feeds/_4Bpke8POCqxzxfKq.xml"
+        ); // MotoGP
+        fetchFeed(
+          "#feed-LPGATour .feed-content",
+          "https://rss.app/feeds/_a4W47htGlhRlO2ju.xml"
+        ); // LPGA Tour
 
         // Existing menu functionality
         let selectedSection = "Home";
@@ -1069,8 +1149,7 @@
           toggle.textContent = expanded ? "More…" : "Less…";
         };
 
-        // For any RSS feed links that might have been added outside fetchFeed,
-        // force them to open in a new tab and attach click listener
+        // For any RSS feed links added outside fetchFeed, force them to open in a new tab and attach a click listener
         document.querySelectorAll(".rss-feed a").forEach(link => {
           link.setAttribute("target", "_blank");
           link.addEventListener("click", () => {
@@ -1081,10 +1160,3 @@
     </script>
   </body>
 </html>
-
-
-
-
-
-
-
