--- a/index.html
+++ b/index.html
@@ -1031,6 +1031,16 @@
           "#feed-LPGATour .feed-content",
           "https://rss.app/feeds/_a4W47htGlhRlO2ju.xml"
         ); // LPGA Tour
+fetchFeed(
+  "#feed-NCAAF .feed-content",
+  "https://rss.app/feeds/_AnA5shmkBJ7gdzCs.xml"
+);
+
+fetchFeed(
+  "#feed-PGATour .feed-content",
+  "https://rss.app/feeds/_c2yYJn0ed57eix3y.xml"
+);
+
 
         // Existing menu functionality
         let selectedSection = "Home";
@@ -1160,3 +1170,8 @@
     </script>
   </body>
 </html>
+
+
+
+
+
